# tmux-snaglord

./: CHANGELOG.md  Cargo.toml  README.md  justfile
meta/: logo.avif
src/: action.rs  app.rs  config.rs  main.rs  parser.rs  presets.rs  tmux.rs  ui.rs  utils.rs
