[package]
name = "tmux-snaglord"
version = "0.1.6"
edition = "2024"
authors = [""]
description = "A TUI application to make copying terminal history from tmux easier"
license = "MIT"
repository = "https://github.com/raine/tmux-snaglord"
homepage = "https://github.com/raine/tmux-snaglord"
documentation = "https://github.com/raine/tmux-snaglord#readme"
exclude = ["meta/"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
# TUI stack
ratatui = "0.30"
crossterm = "0.29"
# Parsing
regex = "1.10"
strip-ansi-escapes = "0.2"
ansi-to-tui = "8"
# Fuzzy search
fuzzy-matcher = "0.3"
# JSON parsing
serde_json = "1.0"
# Unicode handling
unicode-width = "0.2"
# Clipboard
arboard = "3"

[dev-dependencies]
tempfile = "3.14"
